# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: production.yaml
migrations/: 20230627150148_add_status_to_subscriptions.sql  20230627150713_make_status_not_null_in_subscriptions.sql  20230627151222_create_subscription_tokens_table.sql  20230822125309_create_users_table.sql  20230822145329_rename_password_column.sql  20230822155928_add_salt_to_users.sql  20230822170740_remove_salt_from_users.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
