[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
test-case = "3.1.0"
sqlx = { version = "0.6", default-features = false, features = ["migrate"] }
once_cell = "1"
claims = "0.7"
rand = "0.8"
fake = "2.6"
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.5"
serde_json = "1"

[dependencies]
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.16"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "offline"
]
